--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,5 +7,5 @@ compatibility_date = "2024-09-01"
 compatibility_flags = [
   "node",                       # alias for Node.js compatibility
   "nodejs_compat",              # legacy name (kept for safety)
-  "nodejs_compat_populate_process_env"
+  "nodejs_compat_populate_process_env" # ok
 ]
