--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:cf": "npx @cloudflare/next-on-pages@latest",
     "start": "next start",
     "lint": "eslint ."
   },
@@ -25,4 +26,3 @@
     "@types/react-dom": "^18.3.0"
   }
 }
-
