--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "async_hooks": "file:shims/async_hooks",
     "@supabase/supabase-js": "^2.45.0",
     "classnames": "^2.5.1",
     "next": "^14.2.4",
