--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "build:cf": "npx @cloudflare/next-on-pages@1.12.1 && node scripts/fix-cf-dist.cjs",
+    "build:cf:vercel": "npx vercel@47.0.5 build && node scripts/fix-cf-dist.cjs",
     "start": "next start",
     "lint": "eslint ."
   },
