--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "async_hooks": "file:shims/async_hooks",
     "@supabase/supabase-js": "^2.45.0",
     "classnames": "^2.5.1",
-    "next": "^14.2.4",
+    "next": "14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
