--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.45.0",
     "classnames": "^2.5.1",
     "next": "14.2.4",
@@ -18,12 +19,12 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5.6.2",
-    "@types/node": "^20.14.10",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0"
+    "typescript": "^5.6.2"
   }
 }
